# moveit_planning_scene_example

./: CMakeLists.txt  package.xml  readme.md
src/: access_planning_scene.cpp  add_collision_objects.cpp
